--- a/app/src/main/res/layout-land/activity_resultat_image.xml
+++ b/app/src/main/res/layout-land/activity_resultat_image.xml
@@ -30,22 +30,32 @@
         android:layout_marginTop="56dp"
         android:textSize="18sp"
         android:background="@drawable/it_style_spinner"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/air_archer" />
+        app:layout_constraintStart_toStartOf="@id/air_archer"
 
-    <TextView
+        app:layout_constraintTop_toBottomOf="@+id/air_archer" />
+
+    <GridView
         android:id="@+id/res_i_round_filter"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
         android:hint="@string/resRoundFilter"
         android:maxEms="60"
         android:minEms="10"
         android:singleLine="false"
+        android:layout_height="0dp"
+        android:layout_marginTop="10dp"
+        android:layout_weight="10"
+        android:columnWidth="80dp"
+        android:gravity="left"
+        android:horizontalSpacing="15dp"
+        android:numColumns="auto_fit"
+        android:stretchMode="columnWidth"
+        android:verticalSpacing="20dp"
+        app:layout_constraintStart_toStartOf="@id/air_choix_resultat"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/Layout_center"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintRight_toLeftOf="@id/Layout_center"
-        app:layout_constraintTop_toBottomOf="@id/air_round" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/air_choix_resultat" />
 
     <LinearLayout
         android:id="@+id/Layout_center"
