--- a/app/src/main/res/layout/activity_gestion_filter.xml
+++ b/app/src/main/res/layout/activity_gestion_filter.xml
@@ -10,8 +10,8 @@
         android:id="@+id/gridChoice"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="10"
         android:layout_marginTop="4dp"
+        android:layout_weight="10"
         android:columnWidth="80dp"
         android:gravity="center"
         android:horizontalSpacing="15dp"
@@ -19,25 +19,87 @@
         android:stretchMode="columnWidth"
         android:verticalSpacing="20dp"
 
+        app:layout_constraintBottom_toTopOf="@id/gf_gb_checkColor"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/filterResult"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
+    <RadioGroup
+        android:id="@+id/gf_gb_checkColor"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="2"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toTopOf="@id/filterResult"
+        app:layout_constraintStart_toEndOf="@id/gridChoice"
+        app:layout_constraintTop_toBottomOf="@id/gridChoice">
 
-    <TextView
+        <RadioButton
+            android:id="@+id/gf_rb_blue"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:checked="true"
+            android:text="@string/blue"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <RadioButton
+            android:id="@+id/gf_rb_red"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:checked="false"
+            android:text="@string/red"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <RadioButton
+            android:id="@+id/gf_rb_yellow"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:checked="false"
+            android:text="@string/yellow"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <RadioButton
+            android:id="@+id/gf_rb_black"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:checked="false"
+            android:text="@string/black"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </RadioGroup>
+
+    <GridView
         android:id="@+id/filterResult"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="3"
         android:layout_marginStart="8dp"
+        android:layout_weight="3"
+        android:text="@string/filter"
         android:textSize="16sp"
-        android:text="parametreRetour"
+        android:orientation="horizontal"
+        android:columnWidth="80dp"
+        android:gravity="center"
+        android:horizontalSpacing="15dp"
+        android:numColumns="auto_fit"
+        android:stretchMode="columnWidth"
+        android:verticalSpacing="20dp"
         app:layout_constraintBottom_toTopOf="@id/buttom"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/gridChoice"
-        app:layout_goneMarginBottom="10dp" />
+        app:layout_goneMarginBottom="10dp"
+/>
 
     <LinearLayout
         android:id="@+id/buttom"
@@ -56,8 +118,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/bp_clear_filter"
-            app:layout_constraintBottom_toBottomOf="parent"
-            />
+            app:layout_constraintBottom_toBottomOf="parent" />
 
         <Button
             android:id="@+id/gf_bp_cancel"
