--- a/app/src/main/res/layout/activity_resultat_image.xml
+++ b/app/src/main/res/layout/activity_resultat_image.xml
@@ -106,14 +106,23 @@
             app:layout_constraintDimensionRatio="1" />
     </ScrollView>
 </LinearLayout>
-    <TextView
+    <GridView
         android:id="@+id/res_i_round_filter"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:focusedByDefault="false"
         android:focusableInTouchMode="false"
         android:ems="10"
         android:hint="@string/resRoundFilter"
+        android:layout_marginTop="4dp"
+        android:layout_weight="10"
+        android:columnWidth="60dp"
+        android:gravity="left"
+
+        android:numColumns="auto_fit"
+        android:stretchMode="columnWidth"
+        android:verticalSpacing="5dp"
+        app:layout_constraintTop_toBottomOf="@id/air_resultat"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@id/bp_partage"
