--- a/app/src/main/res/layout-land/activity_maintenance.xml
+++ b/app/src/main/res/layout-land/activity_maintenance.xml
@@ -57,18 +57,20 @@
         app:layout_constraintStart_toEndOf="@id/am_bSup_round"
         app:layout_constraintTop_toTopOf="@id/am_bSup_round" />
 
-
-    <TextView
-        android:id="@+id/TextOffset"
+    <CheckBox
+        android:id="@+id/RadioArrow"
         android:layout_width="0dp"
         android:layout_height="53dp"
-        android:layout_marginTop="12dp"
         android:layout_weight="2"
-        android:gravity="center"
-        android:text="@string/pointageOffsetDesc"
+        android:layout_marginTop="12dp"
+
+        android:textAlignment="textStart"
+        android:layout_gravity="start"
+        android:text="@string/nameArrow"
         app:layout_constraintStart_toStartOf="@+id/am_bexport_archer_rounds"
         app:layout_constraintTop_toBottomOf="@+id/am_bexport_archer_rounds"
-        tools:text="@string/pointageOffsetDesc" />
+  />
+
 
     <EditText
         android:id="@+id/pointageOffset"
@@ -85,8 +87,20 @@
         android:text="@string/pointageOffset"
         android:textAlignment="center"
         android:visibility="visible"
-        app:layout_constraintStart_toEndOf="@+id/TextOffset"
-        app:layout_constraintTop_toTopOf="@+id/TextOffset" />
+        app:layout_constraintStart_toEndOf="@+id/RadioArrow"
+        app:layout_constraintTop_toTopOf="@+id/RadioArrow" />
+    <TextView
+        android:id="@+id/TextOffset"
+        android:layout_width="0dp"
+        android:layout_height="53dp"
+
+        android:layout_weight="2"
+        android:gravity="center"
+        android:text="@string/pointageOffsetDesc"
+        app:layout_constraintStart_toEndOf="@+id/pointageOffset"
+        app:layout_constraintTop_toTopOf="@+id/pointageOffset"
+        tools:text="@string/pointageOffsetDesc" />
+
 
     <Button
         android:id="@+id/am_bexport_archer_rounds"
@@ -129,8 +143,8 @@
         android:indeterminate="false"
         android:max="100"
         android:visibility="invisible"
-        app:layout_constraintStart_toEndOf="@id/pointageOffset"
-        app:layout_constraintTop_toTopOf="@+id/pointageOffset" />
+        app:layout_constraintStart_toEndOf="@id/TextOffset"
+        app:layout_constraintTop_toTopOf="@+id/TextOffset" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline"
